tcg: added ARM support
Renamed env_offset_eip and env_sizeof_eip (in the TCGContext struct) to
env_offset_pc and env_sizeof_pc respectively to make them more generic (i.e.
"program counter" rather than the X86-specific "extended instruction pointer").

Restricted CC_OP to X86 architectures as per
https://qemu.weilnetz.de/doc/qemu-tech-20160903.html#Condition-code-optimisations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,8 @@ if(WITH_GUEST MATCHES "i386")
     set(TARGET_LONG_BITS "32")
 elseif(WITH_GUEST MATCHES "x86_64")
     set(TARGET_LONG_BITS "64")
+elseif(WITH_GUEST MATCHES "arm")
+    set(TARGET_LONG_BITS "32")
 else()
     message(FATAL_ERROR "Incorrect target ${WITH_GUEST}")
 endif()
