--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,12 @@ else (TARGET_LONG_BITS)
     MESSAGE (FATAL_ERROR "Please specify -DTARGET_LONG_BITS")
 endif (TARGET_LONG_BITS)
 
+if (WITH_GUEST MATCHES "i386" OR WITH_GUEST MATCHES "x86_64")
+    set (COMMON_FLAGS "${COMMON_FLAGS} -DTARGET_I386")
+elseif (WITH_GUEST MATCHES "arm")
+    set (COMMON_FLAGS "${COMMON_FLAGS} -DTARGET_ARM")
+endif()
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_FLAGS}")
 
